2016-09-22  Toshihiko Kawano  <kawano@lanl.gov>

	* tools/decemf6.cpp (mf6spec): bug fixed
	special case, when all spectra are zero, add dummy point at the highest energy

2016-10-23  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (DeceRead): modified
	when there is no adding data point, remove temporal section

	* tools/decemf6.cpp (mf6spec): bug fixed
	bug in the zero spectrum case fixed

	* source/deceread.cpp (DeceRead): modified
	* source/endflib.h (ENDFDict): modified
	* source/endflib.cpp (ENDFMF2boundary): modified
	resonance boundary for LSSF=1 case modified
	new variable emaxRe in ENDFDict defined

2016-07-27  Toshihiko Kawano  <kawano@lanl.gov>

	* .gitignore: modified
	some automatically generated files were removed from git tree

2016-05-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: modified
	svn keyword, $Id$, removed from all files
	files exported to git
	version 1.2.1

	* source/decexml.cpp: removed

2015-09-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrAngDistSmooth): update
	smoothing algorithm changed

2015-09-22  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcsurr.cpp (gfrUFindRange): bug gix
	index but at the highest bin

2015-09-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp (DeceBanner): update
	* tools/decemf4.cpp: new file
	create MF4 MT2 from DeCE smoothangdist/reconangdist output.

2015-09-18  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrAngDistSmooth): new function
	average scattering Legendre coefficients generated from resonances

2015-09-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcsurr.cpp: updated
	* source/gfr.cpp (gfrPtCross): updated
	add unresolved resonance calculation

	* source/deceprocpoint.cpp: new file
	create pointwise cross sections, and store in temporal MTs

2015-09-13  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrenergy.cpp: new file
	determine energy grid for resonance reconstruction
